@startuml SRP
class Car {
	-String _id
	-String _brand
	-String _model

	+String: getId()
	+String: getModel()
	+String: getBrand()
}


class CarBest {
	+Car : getBestCar()
}


class CarDB {
	-List<Car> _carsDb 
	+Car : getFromDb()
	+List<Car>: getAllCars()
}


class CarManager {
    -CarDB carDb;
    -CarNames carNames;
    -CarBest carBest;

	+Car: getFromDb()
	+String: getCarsNames()
	+Car: getBestCar()
}


class CarNames {
	-List<Car> _carsDb 
	+String: getCarsNames()
}

CarDB -- Car
CarManager -- CarDB
CarManager -- CarBest
CarManager -- CarNames

@enduml